[gd_scene load_steps=4 format=2]

[ext_resource path="res://addons/anima/shapes/Rectangle.gd" type="Script" id=1]
[ext_resource path="res://addons/anima/ui/Frames/AnimaAddFrame.gd" type="Script" id=2]
[ext_resource path="res://addons/anima/components/Animatable.gd" type="Script" id=3]

[node name="AnimaAddFrame" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -664.0
rect_min_size = Vector2( 360, 0 )
rect_pivot_offset = Vector2( 180, 300 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}
Animation/AnimatePropertyChange = true
Animation/Speed = 0.3
Animation/Easing = 0
Rectangle/Size = Rect2( 0, 0, 100, 100 )
Rectangle/FillColor = Color( 0.0862745, 0.0862745, 0.12549, 1 )
Rectangle/Border/Color = Color( 1, 1, 1, 0 )
Rectangle/Border/Blend = false
Rectangle/Border/Offset = Vector2( 0, 0 )
Rectangle/Border/Widh/Left = 0
Rectangle/Border/Widh/Top = 0
Rectangle/Border/Widh/Right = 0
Rectangle/Border/Widh/Bottom = 0
Rectangle/Border/Radius/Details = 8
Rectangle/Border/Radius/TopLeft = 0
Rectangle/Border/Radius/TopRight = 0
Rectangle/Border/Radius/BottomRight = 0
Rectangle/Border/Radius/BottomLeft = 0
Rectangle/Border/Offset/Radius/Details = 8
Rectangle/Border/Offset/Radius/TopLeft = -1
Rectangle/Border/Offset/Radius/TopRight = -1
Rectangle/Border/Offset/Radius/BottomRight = -1
Rectangle/Border/Offset/Radius/BottomLeft = -1
Rectangle/Shadow/Color = Color( 1, 1, 1, 0 )
Rectangle/Shadow/Size = 0
Rectangle/Shadow/Offset = Vector2( 0, 0 )

[node name="AddButton" type="Control" parent="."]
anchor_right = 0.283
anchor_bottom = 0.17
margin_left = 124.0
margin_top = 231.0
margin_right = 124.12
margin_bottom = 231.0
rect_pivot_offset = Vector2( 51, 51 )
mouse_default_cursor_shape = 2
script = ExtResource( 3 )
Animation/AnimatePropertyChange = true
Animation/Speed = 0.3
Animation/Easing = 28.0

[node name="Dotted" type="Control" parent="AddButton"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 51, 51 )
mouse_filter = 1
script = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}
draw_from_center = true
Animation/AnimatePropertyChange = true
Animation/Speed = 0.3
Animation/Easing = 0
Rectangle/Size = Rect2( 0, 0, 100, 100 )
Rectangle/FillColor = Color( 0.192157, 0.270588, 0.411765, 0 )
Rectangle/Border/Color = Color( 0.4, 0.4, 0.478431, 1 )
Rectangle/Border/Blend = false
Rectangle/Border/Offset = Vector2( 0, 0 )
Rectangle/Border/Widh/Left = 2.0
Rectangle/Border/Widh/Top = 2.0
Rectangle/Border/Widh/Right = 2
Rectangle/Border/Widh/Bottom = 2.0
Rectangle/Border/Radius/Details = 20.0
Rectangle/Border/Radius/TopLeft = 8.0
Rectangle/Border/Radius/TopRight = 8.0
Rectangle/Border/Radius/BottomRight = 8.0
Rectangle/Border/Radius/BottomLeft = 8.0
Rectangle/Border/Offset/Radius/Details = 8
Rectangle/Border/Offset/Radius/TopLeft = -1
Rectangle/Border/Offset/Radius/TopRight = -1
Rectangle/Border/Offset/Radius/BottomRight = -1
Rectangle/Border/Offset/Radius/BottomLeft = -1
Rectangle/Shadow/Color = Color( 1, 1, 1, 0 )
Rectangle/Shadow/Size = 0
Rectangle/Shadow/Offset = Vector2( 0, 0 )

[node name="VerticalLines" type="Control" parent="AddButton/Dotted"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 1
__meta__ = {
"_edit_lock_": true
}

[node name="AnimaRectangle" type="Control" parent="AddButton/Dotted/VerticalLines"]
anchor_bottom = 1.0
margin_left = 8.0
margin_top = -4.0
margin_right = 13.0
margin_bottom = 9.99995
rect_pivot_offset = Vector2( 2.5, 58 )
mouse_filter = 1
script = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}
Animation/AnimatePropertyChange = true
Animation/Speed = 0.3
Animation/Easing = 0
Rectangle/Size = Rect2( 0, 0, 100, 100 )
Rectangle/FillColor = Color( 0.0862745, 0.0862745, 0.12549, 1 )
Rectangle/Border/Color = Color( 1, 1, 1, 0 )
Rectangle/Border/Blend = false
Rectangle/Border/Offset = Vector2( 0, 0 )
Rectangle/Border/Widh/Left = 0
Rectangle/Border/Widh/Top = 0
Rectangle/Border/Widh/Right = 0
Rectangle/Border/Widh/Bottom = 0
Rectangle/Border/Radius/Details = 8
Rectangle/Border/Radius/TopLeft = 0
Rectangle/Border/Radius/TopRight = 0
Rectangle/Border/Radius/BottomRight = 0
Rectangle/Border/Radius/BottomLeft = 0
Rectangle/Border/Offset/Radius/Details = 8
Rectangle/Border/Offset/Radius/TopLeft = -1
Rectangle/Border/Offset/Radius/TopRight = -1
Rectangle/Border/Offset/Radius/BottomRight = -1
Rectangle/Border/Offset/Radius/BottomLeft = -1
Rectangle/Shadow/Color = Color( 1, 1, 1, 0 )
Rectangle/Shadow/Size = 0
Rectangle/Shadow/Offset = Vector2( 0, 0 )

[node name="AnimaRectangle2" type="Control" parent="AddButton/Dotted/VerticalLines"]
anchor_bottom = 1.0
margin_left = 24.0
margin_top = -4.0
margin_right = 29.0
margin_bottom = 9.99995
rect_pivot_offset = Vector2( 2.5, 58 )
mouse_filter = 1
script = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}
Animation/AnimatePropertyChange = true
Animation/Speed = 0.3
Animation/Easing = 0
Rectangle/Size = Rect2( 0, 0, 100, 100 )
Rectangle/FillColor = Color( 0.0862745, 0.0862745, 0.12549, 1 )
Rectangle/Border/Color = Color( 1, 1, 1, 0 )
Rectangle/Border/Blend = false
Rectangle/Border/Offset = Vector2( 0, 0 )
Rectangle/Border/Widh/Left = 0
Rectangle/Border/Widh/Top = 0
Rectangle/Border/Widh/Right = 0
Rectangle/Border/Widh/Bottom = 0
Rectangle/Border/Radius/Details = 8
Rectangle/Border/Radius/TopLeft = 0
Rectangle/Border/Radius/TopRight = 0
Rectangle/Border/Radius/BottomRight = 0
Rectangle/Border/Radius/BottomLeft = 0
Rectangle/Border/Offset/Radius/Details = 8
Rectangle/Border/Offset/Radius/TopLeft = -1
Rectangle/Border/Offset/Radius/TopRight = -1
Rectangle/Border/Offset/Radius/BottomRight = -1
Rectangle/Border/Offset/Radius/BottomLeft = -1
Rectangle/Shadow/Color = Color( 1, 1, 1, 0 )
Rectangle/Shadow/Size = 0
Rectangle/Shadow/Offset = Vector2( 0, 0 )

[node name="AnimaRectangle3" type="Control" parent="AddButton/Dotted/VerticalLines"]
anchor_bottom = 1.0
margin_left = 40.0
margin_top = -4.0
margin_right = 45.0
margin_bottom = 9.99995
rect_pivot_offset = Vector2( 2.5, 58 )
mouse_filter = 1
script = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}
Animation/AnimatePropertyChange = true
Animation/Speed = 0.3
Animation/Easing = 0
Rectangle/Size = Rect2( 0, 0, 100, 100 )
Rectangle/FillColor = Color( 0.0862745, 0.0862745, 0.12549, 1 )
Rectangle/Border/Color = Color( 1, 1, 1, 0 )
Rectangle/Border/Blend = false
Rectangle/Border/Offset = Vector2( 0, 0 )
Rectangle/Border/Widh/Left = 0
Rectangle/Border/Widh/Top = 0
Rectangle/Border/Widh/Right = 0
Rectangle/Border/Widh/Bottom = 0
Rectangle/Border/Radius/Details = 8
Rectangle/Border/Radius/TopLeft = 0
Rectangle/Border/Radius/TopRight = 0
Rectangle/Border/Radius/BottomRight = 0
Rectangle/Border/Radius/BottomLeft = 0
Rectangle/Border/Offset/Radius/Details = 8
Rectangle/Border/Offset/Radius/TopLeft = -1
Rectangle/Border/Offset/Radius/TopRight = -1
Rectangle/Border/Offset/Radius/BottomRight = -1
Rectangle/Border/Offset/Radius/BottomLeft = -1
Rectangle/Shadow/Color = Color( 1, 1, 1, 0 )
Rectangle/Shadow/Size = 0
Rectangle/Shadow/Offset = Vector2( 0, 0 )

[node name="AnimaRectangle4" type="Control" parent="AddButton/Dotted/VerticalLines"]
anchor_bottom = 1.0
margin_left = 56.0
margin_top = -4.0
margin_right = 61.0
margin_bottom = 9.99995
rect_pivot_offset = Vector2( 2.5, 58 )
mouse_filter = 1
script = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}
Animation/AnimatePropertyChange = true
Animation/Speed = 0.3
Animation/Easing = 0
Rectangle/Size = Rect2( 0, 0, 100, 100 )
Rectangle/FillColor = Color( 0.0862745, 0.0862745, 0.12549, 1 )
Rectangle/Border/Color = Color( 1, 1, 1, 0 )
Rectangle/Border/Blend = false
Rectangle/Border/Offset = Vector2( 0, 0 )
Rectangle/Border/Widh/Left = 0
Rectangle/Border/Widh/Top = 0
Rectangle/Border/Widh/Right = 0
Rectangle/Border/Widh/Bottom = 0
Rectangle/Border/Radius/Details = 8
Rectangle/Border/Radius/TopLeft = 0
Rectangle/Border/Radius/TopRight = 0
Rectangle/Border/Radius/BottomRight = 0
Rectangle/Border/Radius/BottomLeft = 0
Rectangle/Border/Offset/Radius/Details = 8
Rectangle/Border/Offset/Radius/TopLeft = -1
Rectangle/Border/Offset/Radius/TopRight = -1
Rectangle/Border/Offset/Radius/BottomRight = -1
Rectangle/Border/Offset/Radius/BottomLeft = -1
Rectangle/Shadow/Color = Color( 1, 1, 1, 0 )
Rectangle/Shadow/Size = 0
Rectangle/Shadow/Offset = Vector2( 0, 0 )

[node name="AnimaRectangle5" type="Control" parent="AddButton/Dotted/VerticalLines"]
anchor_bottom = 1.0
margin_left = 72.0
margin_top = -4.0
margin_right = 77.0
margin_bottom = 9.99995
rect_pivot_offset = Vector2( 2.5, 58 )
mouse_filter = 1
script = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}
Animation/AnimatePropertyChange = true
Animation/Speed = 0.3
Animation/Easing = 0
Rectangle/Size = Rect2( 0, 0, 100, 100 )
Rectangle/FillColor = Color( 0.0862745, 0.0862745, 0.12549, 1 )
Rectangle/Border/Color = Color( 1, 1, 1, 0 )
Rectangle/Border/Blend = false
Rectangle/Border/Offset = Vector2( 0, 0 )
Rectangle/Border/Widh/Left = 0
Rectangle/Border/Widh/Top = 0
Rectangle/Border/Widh/Right = 0
Rectangle/Border/Widh/Bottom = 0
Rectangle/Border/Radius/Details = 8
Rectangle/Border/Radius/TopLeft = 0
Rectangle/Border/Radius/TopRight = 0
Rectangle/Border/Radius/BottomRight = 0
Rectangle/Border/Radius/BottomLeft = 0
Rectangle/Border/Offset/Radius/Details = 8
Rectangle/Border/Offset/Radius/TopLeft = -1
Rectangle/Border/Offset/Radius/TopRight = -1
Rectangle/Border/Offset/Radius/BottomRight = -1
Rectangle/Border/Offset/Radius/BottomLeft = -1
Rectangle/Shadow/Color = Color( 1, 1, 1, 0 )
Rectangle/Shadow/Size = 0
Rectangle/Shadow/Offset = Vector2( 0, 0 )

[node name="AnimaRectangle6" type="Control" parent="AddButton/Dotted/VerticalLines"]
anchor_bottom = 1.0
margin_left = 88.0
margin_top = -4.0
margin_right = 93.0
margin_bottom = 9.99995
rect_pivot_offset = Vector2( 2.5, 58 )
mouse_filter = 1
script = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}
Animation/AnimatePropertyChange = true
Animation/Speed = 0.3
Animation/Easing = 0
Rectangle/Size = Rect2( 0, 0, 100, 100 )
Rectangle/FillColor = Color( 0.0862745, 0.0862745, 0.12549, 1 )
Rectangle/Border/Color = Color( 1, 1, 1, 0 )
Rectangle/Border/Blend = false
Rectangle/Border/Offset = Vector2( 0, 0 )
Rectangle/Border/Widh/Left = 0
Rectangle/Border/Widh/Top = 0
Rectangle/Border/Widh/Right = 0
Rectangle/Border/Widh/Bottom = 0
Rectangle/Border/Radius/Details = 8
Rectangle/Border/Radius/TopLeft = 0
Rectangle/Border/Radius/TopRight = 0
Rectangle/Border/Radius/BottomRight = 0
Rectangle/Border/Radius/BottomLeft = 0
Rectangle/Border/Offset/Radius/Details = 8
Rectangle/Border/Offset/Radius/TopLeft = -1
Rectangle/Border/Offset/Radius/TopRight = -1
Rectangle/Border/Offset/Radius/BottomRight = -1
Rectangle/Border/Offset/Radius/BottomLeft = -1
Rectangle/Shadow/Color = Color( 1, 1, 1, 0 )
Rectangle/Shadow/Size = 0
Rectangle/Shadow/Offset = Vector2( 0, 0 )

[node name="HorizontalLines" type="Control" parent="AddButton/Dotted"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_rotation = 90.0
rect_pivot_offset = Vector2( 51, 51 )
mouse_filter = 1
__meta__ = {
"_edit_lock_": true
}

[node name="AnimaRectangle" type="Control" parent="AddButton/Dotted/HorizontalLines"]
anchor_bottom = 1.0
margin_left = 8.0
margin_top = -4.0
margin_right = 13.0
margin_bottom = 9.99995
rect_pivot_offset = Vector2( 2.5, 58 )
mouse_filter = 1
script = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}
Animation/AnimatePropertyChange = true
Animation/Speed = 0.3
Animation/Easing = 0
Rectangle/Size = Rect2( 0, 0, 100, 100 )
Rectangle/FillColor = Color( 0.0862745, 0.0862745, 0.12549, 1 )
Rectangle/Border/Color = Color( 1, 1, 1, 0 )
Rectangle/Border/Blend = false
Rectangle/Border/Offset = Vector2( 0, 0 )
Rectangle/Border/Widh/Left = 0
Rectangle/Border/Widh/Top = 0
Rectangle/Border/Widh/Right = 0
Rectangle/Border/Widh/Bottom = 0
Rectangle/Border/Radius/Details = 8
Rectangle/Border/Radius/TopLeft = 0
Rectangle/Border/Radius/TopRight = 0
Rectangle/Border/Radius/BottomRight = 0
Rectangle/Border/Radius/BottomLeft = 0
Rectangle/Border/Offset/Radius/Details = 8
Rectangle/Border/Offset/Radius/TopLeft = -1
Rectangle/Border/Offset/Radius/TopRight = -1
Rectangle/Border/Offset/Radius/BottomRight = -1
Rectangle/Border/Offset/Radius/BottomLeft = -1
Rectangle/Shadow/Color = Color( 1, 1, 1, 0 )
Rectangle/Shadow/Size = 0
Rectangle/Shadow/Offset = Vector2( 0, 0 )

[node name="AnimaRectangle2" type="Control" parent="AddButton/Dotted/HorizontalLines"]
anchor_bottom = 1.0
margin_left = 24.0
margin_top = -4.0
margin_right = 29.0
margin_bottom = 9.99995
rect_pivot_offset = Vector2( 2.5, 58 )
mouse_filter = 1
script = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}
Animation/AnimatePropertyChange = true
Animation/Speed = 0.3
Animation/Easing = 0
Rectangle/Size = Rect2( 0, 0, 100, 100 )
Rectangle/FillColor = Color( 0.0862745, 0.0862745, 0.12549, 1 )
Rectangle/Border/Color = Color( 1, 1, 1, 0 )
Rectangle/Border/Blend = false
Rectangle/Border/Offset = Vector2( 0, 0 )
Rectangle/Border/Widh/Left = 0
Rectangle/Border/Widh/Top = 0
Rectangle/Border/Widh/Right = 0
Rectangle/Border/Widh/Bottom = 0
Rectangle/Border/Radius/Details = 8
Rectangle/Border/Radius/TopLeft = 0
Rectangle/Border/Radius/TopRight = 0
Rectangle/Border/Radius/BottomRight = 0
Rectangle/Border/Radius/BottomLeft = 0
Rectangle/Border/Offset/Radius/Details = 8
Rectangle/Border/Offset/Radius/TopLeft = -1
Rectangle/Border/Offset/Radius/TopRight = -1
Rectangle/Border/Offset/Radius/BottomRight = -1
Rectangle/Border/Offset/Radius/BottomLeft = -1
Rectangle/Shadow/Color = Color( 1, 1, 1, 0 )
Rectangle/Shadow/Size = 0
Rectangle/Shadow/Offset = Vector2( 0, 0 )

[node name="AnimaRectangle3" type="Control" parent="AddButton/Dotted/HorizontalLines"]
anchor_bottom = 1.0
margin_left = 40.0
margin_top = -4.0
margin_right = 45.0
margin_bottom = 9.99995
rect_pivot_offset = Vector2( 2.5, 58 )
mouse_filter = 1
script = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}
Animation/AnimatePropertyChange = true
Animation/Speed = 0.3
Animation/Easing = 0
Rectangle/Size = Rect2( 0, 0, 100, 100 )
Rectangle/FillColor = Color( 0.0862745, 0.0862745, 0.12549, 1 )
Rectangle/Border/Color = Color( 1, 1, 1, 0 )
Rectangle/Border/Blend = false
Rectangle/Border/Offset = Vector2( 0, 0 )
Rectangle/Border/Widh/Left = 0
Rectangle/Border/Widh/Top = 0
Rectangle/Border/Widh/Right = 0
Rectangle/Border/Widh/Bottom = 0
Rectangle/Border/Radius/Details = 8
Rectangle/Border/Radius/TopLeft = 0
Rectangle/Border/Radius/TopRight = 0
Rectangle/Border/Radius/BottomRight = 0
Rectangle/Border/Radius/BottomLeft = 0
Rectangle/Border/Offset/Radius/Details = 8
Rectangle/Border/Offset/Radius/TopLeft = -1
Rectangle/Border/Offset/Radius/TopRight = -1
Rectangle/Border/Offset/Radius/BottomRight = -1
Rectangle/Border/Offset/Radius/BottomLeft = -1
Rectangle/Shadow/Color = Color( 1, 1, 1, 0 )
Rectangle/Shadow/Size = 0
Rectangle/Shadow/Offset = Vector2( 0, 0 )

[node name="AnimaRectangle4" type="Control" parent="AddButton/Dotted/HorizontalLines"]
anchor_bottom = 1.0
margin_left = 56.0
margin_top = -4.0
margin_right = 61.0
margin_bottom = 9.99995
rect_pivot_offset = Vector2( 2.5, 58 )
mouse_filter = 1
script = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}
Animation/AnimatePropertyChange = true
Animation/Speed = 0.3
Animation/Easing = 0
Rectangle/Size = Rect2( 0, 0, 100, 100 )
Rectangle/FillColor = Color( 0.0862745, 0.0862745, 0.12549, 1 )
Rectangle/Border/Color = Color( 1, 1, 1, 0 )
Rectangle/Border/Blend = false
Rectangle/Border/Offset = Vector2( 0, 0 )
Rectangle/Border/Widh/Left = 0
Rectangle/Border/Widh/Top = 0
Rectangle/Border/Widh/Right = 0
Rectangle/Border/Widh/Bottom = 0
Rectangle/Border/Radius/Details = 8
Rectangle/Border/Radius/TopLeft = 0
Rectangle/Border/Radius/TopRight = 0
Rectangle/Border/Radius/BottomRight = 0
Rectangle/Border/Radius/BottomLeft = 0
Rectangle/Border/Offset/Radius/Details = 8
Rectangle/Border/Offset/Radius/TopLeft = -1
Rectangle/Border/Offset/Radius/TopRight = -1
Rectangle/Border/Offset/Radius/BottomRight = -1
Rectangle/Border/Offset/Radius/BottomLeft = -1
Rectangle/Shadow/Color = Color( 1, 1, 1, 0 )
Rectangle/Shadow/Size = 0
Rectangle/Shadow/Offset = Vector2( 0, 0 )

[node name="AnimaRectangle5" type="Control" parent="AddButton/Dotted/HorizontalLines"]
anchor_bottom = 1.0
margin_left = 72.0
margin_top = -4.0
margin_right = 77.0
margin_bottom = 9.99995
rect_pivot_offset = Vector2( 2.5, 58 )
mouse_filter = 1
script = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}
Animation/AnimatePropertyChange = true
Animation/Speed = 0.3
Animation/Easing = 0
Rectangle/Size = Rect2( 0, 0, 100, 100 )
Rectangle/FillColor = Color( 0.0862745, 0.0862745, 0.12549, 1 )
Rectangle/Border/Color = Color( 1, 1, 1, 0 )
Rectangle/Border/Blend = false
Rectangle/Border/Offset = Vector2( 0, 0 )
Rectangle/Border/Widh/Left = 0
Rectangle/Border/Widh/Top = 0
Rectangle/Border/Widh/Right = 0
Rectangle/Border/Widh/Bottom = 0
Rectangle/Border/Radius/Details = 8
Rectangle/Border/Radius/TopLeft = 0
Rectangle/Border/Radius/TopRight = 0
Rectangle/Border/Radius/BottomRight = 0
Rectangle/Border/Radius/BottomLeft = 0
Rectangle/Border/Offset/Radius/Details = 8
Rectangle/Border/Offset/Radius/TopLeft = -1
Rectangle/Border/Offset/Radius/TopRight = -1
Rectangle/Border/Offset/Radius/BottomRight = -1
Rectangle/Border/Offset/Radius/BottomLeft = -1
Rectangle/Shadow/Color = Color( 1, 1, 1, 0 )
Rectangle/Shadow/Size = 0
Rectangle/Shadow/Offset = Vector2( 0, 0 )

[node name="AnimaRectangle6" type="Control" parent="AddButton/Dotted/HorizontalLines"]
anchor_bottom = 1.0
margin_left = 88.0
margin_top = -4.0
margin_right = 93.0
margin_bottom = 9.99995
rect_pivot_offset = Vector2( 2.5, 58 )
mouse_filter = 1
script = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}
Animation/AnimatePropertyChange = true
Animation/Speed = 0.3
Animation/Easing = 0
Rectangle/Size = Rect2( 0, 0, 100, 100 )
Rectangle/FillColor = Color( 0.0862745, 0.0862745, 0.12549, 1 )
Rectangle/Border/Color = Color( 1, 1, 1, 0 )
Rectangle/Border/Blend = false
Rectangle/Border/Offset = Vector2( 0, 0 )
Rectangle/Border/Widh/Left = 0
Rectangle/Border/Widh/Top = 0
Rectangle/Border/Widh/Right = 0
Rectangle/Border/Widh/Bottom = 0
Rectangle/Border/Radius/Details = 8
Rectangle/Border/Radius/TopLeft = 0
Rectangle/Border/Radius/TopRight = 0
Rectangle/Border/Radius/BottomRight = 0
Rectangle/Border/Radius/BottomLeft = 0
Rectangle/Border/Offset/Radius/Details = 8
Rectangle/Border/Offset/Radius/TopLeft = -1
Rectangle/Border/Offset/Radius/TopRight = -1
Rectangle/Border/Offset/Radius/BottomRight = -1
Rectangle/Border/Offset/Radius/BottomLeft = -1
Rectangle/Shadow/Color = Color( 1, 1, 1, 0 )
Rectangle/Shadow/Size = 0
Rectangle/Shadow/Offset = Vector2( 0, 0 )

[node name="Plus" type="Control" parent="AddButton/Dotted"]
modulate = Color( 0.192157, 0.270588, 0.411765, 0.972549 )
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 1
script = ExtResource( 3 )
__meta__ = {
"_edit_lock_": true
}
Animation/AnimatePropertyChange = true
Animation/Speed = 0.3
Animation/Easing = 0

[node name="Horizontal" type="Control" parent="AddButton/Dotted/Plus"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 51, 51 )
mouse_filter = 1
script = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}
draw_from_center = true
Animation/AnimatePropertyChange = true
Animation/Speed = 0.3
Animation/Easing = 0
Rectangle/Size = Rect2( 0, 0, 40, 5 )
Rectangle/FillColor = Color( 1, 1, 1, 0.972549 )
Rectangle/Border/Color = Color( 1, 1, 1, 0 )
Rectangle/Border/Blend = false
Rectangle/Border/Offset = Vector2( 0, 0 )
Rectangle/Border/Widh/Left = 0
Rectangle/Border/Widh/Top = 0
Rectangle/Border/Widh/Right = 0
Rectangle/Border/Widh/Bottom = 0
Rectangle/Border/Radius/Details = 8
Rectangle/Border/Radius/TopLeft = 0
Rectangle/Border/Radius/TopRight = 0
Rectangle/Border/Radius/BottomRight = 0
Rectangle/Border/Radius/BottomLeft = 0
Rectangle/Border/Offset/Radius/Details = 8
Rectangle/Border/Offset/Radius/TopLeft = -1
Rectangle/Border/Offset/Radius/TopRight = -1
Rectangle/Border/Offset/Radius/BottomRight = -1
Rectangle/Border/Offset/Radius/BottomLeft = -1
Rectangle/Shadow/Color = Color( 1, 1, 1, 0 )
Rectangle/Shadow/Size = 0
Rectangle/Shadow/Offset = Vector2( 0, 0 )

[node name="Vertical" type="Control" parent="AddButton/Dotted/Plus"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 51, 51 )
mouse_filter = 1
script = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}
draw_from_center = true
Animation/AnimatePropertyChange = true
Animation/Speed = 0.3
Animation/Easing = 0
Rectangle/Size = Rect2( 0, 0, 5, 40 )
Rectangle/FillColor = Color( 1, 1, 1, 0.972549 )
Rectangle/Border/Color = Color( 1, 1, 1, 0 )
Rectangle/Border/Blend = false
Rectangle/Border/Offset = Vector2( 0, 0 )
Rectangle/Border/Widh/Left = 0.0
Rectangle/Border/Widh/Top = 0
Rectangle/Border/Widh/Right = 0.0
Rectangle/Border/Widh/Bottom = 0.0
Rectangle/Border/Radius/Details = 8
Rectangle/Border/Radius/TopLeft = 0.0
Rectangle/Border/Radius/TopRight = 0.0
Rectangle/Border/Radius/BottomRight = 0
Rectangle/Border/Radius/BottomLeft = 0.0
Rectangle/Border/Offset/Radius/Details = 8
Rectangle/Border/Offset/Radius/TopLeft = -1
Rectangle/Border/Offset/Radius/TopRight = -1
Rectangle/Border/Offset/Radius/BottomRight = -1
Rectangle/Border/Offset/Radius/BottomLeft = -1
Rectangle/Shadow/Color = Color( 1, 1, 1, 0 )
Rectangle/Shadow/Size = 0
Rectangle/Shadow/Offset = Vector2( 0, 0 )

[connection signal="gui_input" from="AddButton" to="." method="_on_AddButton_gui_input"]
[connection signal="mouse_entered" from="AddButton" to="." method="_on_AddButton_mouse_entered"]
[connection signal="mouse_exited" from="AddButton" to="." method="_on_AddButton_mouse_exited"]
